trying to fixed label overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   background-color: #007aff;
   width: 100%;
   padding: 10px 10px 0px 10px;
-  z-index: 1px;
+  z-index: 1;
 }
 
 .nav a:hover {
